Fix Hero Z-Index Issues
Both our old hero (v1) and the Unity block hero (at mobile sizes) had a very high z-index for their content. This caused hero text to appear _above_ anchor menus as you scrolled down the page. Adjusted them all to a uniform z-index of 30 based on the Unity setting.

--- a/sass/blocks/_hero.scss
+++ b/sass/blocks/_hero.scss
@@ -161,7 +161,8 @@ Additional rules from theme.scss
 		position: absolute;
 	}
 	.v1-uds-hero-container {
-		z-index: 999;
+		// Adjusting to match the Unity hero setting, avoiding conflicts with the anchor menu.
+		z-index: 30;
 	}
 	img {
 		position: absolute;
